--- a/src/app/components/dominios/dominios.component.scss
+++ b/src/app/components/dominios/dominios.component.scss
@@ -1,5 +1,9 @@
-.separar{
+.separar {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.container {
+    background-color: aliceblue;
 }
