--- a/src/app/components/reporte-final/reporte-final.component.html
+++ b/src/app/components/reporte-final/reporte-final.component.html
@@ -5,18 +5,20 @@
 
     <h3>Catalizadores que se obtuvieron en el reporte.</h3>
     <table class="table">
-        <thead class="table-dark">
-            <th scope="col">#</th>
-            <th scope="col">Documento</th>
-            <th scope="col">Dominio</th>
-            <th scope="col">Proceso</th>
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">First</th>
+                <th scope="col">Last</th>
+                <th scope="col">Handle</th>
+            </tr>
         </thead>
         <tbody>
             <tr>
                 <th scope="row">1</th>
-                <td>Ejemplo de un catalizador</td>
-                <td>Planear y organizar (PO)</td>
-                <td>PO4</td>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
             </tr>
         </tbody>
     </table>
