--- a/src/app/components/evaluacion/evaluacion.component.html
+++ b/src/app/components/evaluacion/evaluacion.component.html
@@ -198,7 +198,7 @@
     <button class="btn btn-lg btn-primary m-2 float-start" routerLink="/procesos" style="background-color: #003ca1">
     Volver Procesos
   </button>
-    <button class="btn btn-lg btn-primary m-2 float-end" style="background-color: #003ca1" (click)="verificarSeleccion()">
-    Siguiente
+    <button class="btn btn-lg btn-primary m-2 float-end" style="background-color: #a10000" (click)="verificarSeleccion()">
+    Finalizar
   </button>
 </div>
