--- a/src/app/components/dominios/dominios.component.html
+++ b/src/app/components/dominios/dominios.component.html
@@ -6,7 +6,7 @@
     <br />
     <br />
     <br />
-    <div class="list-group separar" *ngFor="let dominio of dominios">
+    <div class="list-group separar col-12" *ngFor="let dominio of dominios">
         <label class="list-group-item" style="width: 550px">
       <input
         class="form-check-input me-1"
