--- a/src/app/components/pagprincipal/pagprincipal.component.html
+++ b/src/app/components/pagprincipal/pagprincipal.component.html
@@ -1,49 +1,115 @@
 <div class="container mb-3">
-    <div class="card-body col-12 col-lg-12">
-        <button class="btn btn-lg btn-primary m-2 float-end" routerLink="/login" style="background-color: #003ca1">
+  <div class="card-body col-12 col-lg-12">
+    <button
+      class="btn btn-lg btn-primary m-2 float-end"
+      routerLink="/login"
+      style="background-color: #003ca1"
+    >
       Cerrar Sesion
     </button>
-        <span class="h1">AREAS PARA REALIZAR AUDITORIA</span>
-        <br />
-    </div>
-    <div class="row">
-        <div class="">
-            <div class="list-group p-2 col-12 col-lg-12  " *ngFor="let area of areas">
-                <button type="button" class="list-group-item list-group-item-action" routerLink="/dominios" (click)="seleccionArea(area.nombre)">
-              {{ area.nombre }}
-            </button>
-            </div>
-        </div>
-    </div> 
+    <span class="h1">AREAS PARA REALIZAR AUDITORIA</span>
     <br />
-    <span class="h1">REGISTRO DE EVALUACIONES</span>
-    <div class="row col-12">
-        <table class="table">
-            <thead>
-                <tr class="col-12">
-                    <th scope="col" class="col-lg-1 col-12 bg-warning border border-3 border-secondary">Usuario</th>
-                    <th scope="col" class="col-lg-2 col-12 bg-warning border border-3 border-secondary">Fecha</th>
-                    <th scope="col" class="col-lg-1 col-12 bg-warning border border-3 border-secondary">Dominios</th>
-                    <th scope="col" class="col-lg-1 col-12 bg-warning border border-3 border-secondary">Procesos</th>
-                    <th scope="col" class="col-lg-1 col-12 bg-warning border border-3 border-secondary">Recursos</th>
-                    <th scope="col" class="col-lg-2 col-12 bg-warning border border-3 border-secondary">Criterios</th>
-                    <th scope="col"class="col-lg-4 col-12 bg-warning border border-3 border-secondary">Procesos identificados</th>
-                    <th scope="col"class="col-lg-2 col-12 bg-warning border border-3 border-secondary">Catalizadores</th>
-                </tr>
-            </thead>
-            <tbody *ngFor="let eva of evaluaciones">
-                <tr>
-                    <th scope="row" class="col-lg-1 col-12 bg-info">{{ eva.usuario }}</th>
-                    <td class="col-lg-2 col-12 border border-3 border-secondary">{{ eva.fecha }}</td>
-                    <td class="col-lg-1 col-12 border border-3 border-secondary">{{ eva.area }}</td>
-                    <td class="col-lg-1 col-12 border border-3 border-secondary">{{ eva.dominios }}</td>
-                    <td class="col-lg-1 col-12 border border-3 border-secondary">{{ eva.procesos }}</td>
-                    <td class="col-lg-2 col-12 border border-3 border-secondary">{{ eva.recursos }}</td>
-                    <td class="col-lg-4 col-12 border border-3 border-secondary" >{{ eva.criterios }}</td>
-                    <td class="col-lg-2 col-12 border border-3 border-secondary">{{ eva.catalizadores }}</td>
-                </tr>
-            </tbody>
-        </table>
+  </div>
+  <div class="row">
+    <div class="">
+      <div class="list-group p-2 col-12 col-lg-12" *ngFor="let area of areas">
+        <button
+          type="button"
+          class="list-group-item list-group-item-action"
+          routerLink="/dominios"
+          (click)="seleccionArea(area.nombre)"
+        >
+          {{ area.nombre }}
+        </button>
+      </div>
     </div>
-    
+  </div>
+  <br />
+  <span class="h1">REGISTRO DE EVALUACIONES</span>
+  <div class="row col-12 col-sm-12">
+    <div class="">
+      <table class="table">
+        <thead>
+          <tr class="col-12">
+            <th
+              scope="col"
+              class="col-sm-1 bg-warning border border-3 border-secondary"
+            >
+              Usuario
+            </th>
+            <th
+              scope="col"
+              class="col-sm-2 bg-warning border border-3 border-secondary"
+            >
+              Fecha
+            </th>
+            <th
+              scope="col"
+              class="col-sm-1 bg-warning border border-3 border-secondary"
+            >
+              Dominios
+            </th>
+            <th
+              scope="col"
+              class="col-sm-1 bg-warning border border-3 border-secondary"
+            >
+              Procesos
+            </th>
+            <th
+              scope="col"
+              class="col-sm-1 bg-warning border border-3 border-secondary"
+            >
+              Recursos
+            </th>
+            <th
+              scope="col"
+              class="col-sm-2 bg-warning border border-3 border-secondary"
+            >
+              Criterios
+            </th>
+            <th
+              scope="col"
+              class="col-sm-1 bg-warning border border-3 border-secondary"
+            >
+              Procesos identificados
+            </th>
+            <th
+              scope="col"
+              class="col-sm-3 bg-warning border border-3 border-secondary"
+            >
+              Catalizadores
+            </th>
+          </tr>
+        </thead>
+        <tbody *ngFor="let eva of evaluaciones">
+          <tr>
+            <th scope="row" class="col-sm-1 col-12 bg-info">
+              {{ eva.usuario }}
+            </th>
+            <td class="col-sm-2 border border-3 border-secondary">
+              {{ eva.fecha }}
+            </td>
+            <td class="col-sm-1 border border-3 border-secondary">
+              {{ eva.area }}
+            </td>
+            <td class="col-sm-1 border border-3 border-secondary">
+              {{ eva.dominios }}
+            </td>
+            <td class="col-sm-1 border border-3 border-secondary">
+              {{ eva.procesos }}
+            </td>
+            <td class="col-sm-2 border border-3 border-secondary">
+              {{ eva.recursos }}
+            </td>
+            <td class="col-sm-1 border border-3 border-secondary">
+              {{ eva.criterios }}
+            </td>
+            <td class="col-sm-3 border border-3 border-secondary">
+              {{ eva.catalizadores }}
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
