--- a/src/app/components/evaluacion/evaluacion.component.scss
+++ b/src/app/components/evaluacion/evaluacion.component.scss
@@ -156,6 +156,12 @@ hr {
 .menu a:hover::before {
     transform: scaleX(1);
 }
+.separador{
+    background-color: #9160c9;
+    padding: 5px;
+    width: 100%;
+    height: 5px;
+}
 
 
 /* ANIMATIONS
