--- a/src/app/components/evaluacion/evaluacion.component.html
+++ b/src/app/components/evaluacion/evaluacion.component.html
@@ -205,7 +205,7 @@
     <form
     [formGroup]="hallazgo">
     <div class="input-group">
-       <h2>Hallazgo No.1</h2>
+       <h2>Hallazgo</h2>
     </div>
     <div class="input-group">
         <span class="input-group-text">Condición</span>
